# berrylite-micro

./: .gitignore  Cargo.toml  MEMO.md  README.md  log.txt  memo.md  rustfmt.toml  tmp.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
benches/: benchmarks.rs  mobilenet_v1.rs
examples/: conv_sin.rs  hello_world.rs  hello_world_int8.rs  mnist_cnn.rs  mnist_cnn_without_bias.rs  mnist_depthwise_cnn.rs  mnist_depthwise_cnn_int8.rs  mobile_net_v1.rs  person_detection.rs  regression_without_bias.rs  simple_conv_sin.rs  simple_conv_sin_filter_2.rs  simple_conv_sin_filter_2_6x6.rs  simple_conv_sin_filter_2_max_pool_6x6.rs  simple_conv_sin_filter_32_max_pool_28x28.rs  simple_conv_sin_filter_32_max_pool_6x6.rs  simple_conv_sin_int8.rs  simple_depthwise_conv_sin_int8.rs
models/: conv_sin.tflite  mnist_cnn_without_bias.tflite  mnist_punning_cnn.tflite  regression_without_bias_int8_1-2.tflite  regression_without_bias_int8_1layer.tflite  regression_without_bias_int8_2-1.tflite  regression_without_bias_int8_2layer_1units.tflite  simple_conv_sin.tflite  simple_conv_sin_filter_2_6x6.tflite  simple_conv_sin_filter_2_max_pool_6x6.tflite  simple_conv_sin_filter_32_max_pool_6x6_int8.tflite  simple_depthwise_conv_avg_pool_relu6_int8.tflite  simple_depthwise_conv_avg_pool_sin_int8.tflite
resources/models/: mnist_cnn.tflite  mnist_depthwise_cnn.tflite  mnist_depthwise_cnn_avg_pool_depth_multiplier_1_2_3_int8.tflite  mnist_depthwise_cnn_avg_pool_int8.tflite  mnist_depthwise_cnn_int8.tflite  regression_without_bias_10_1.tflite  regression_without_bias_int8.tflite  (+5 more)
src/: builtin_op_data.rs  kernel.rs  lib.rs  main.rs  memory_allocation_info.rs  memory_planner.rs  micro_allocation_info.rs  micro_allocator.rs  micro_array.rs  micro_context.rs  micro_errors.rs  micro_erros.rs  micro_graph.rs  micro_interpreter.rs  micro_node.rs  micro_op_resolver.rs  micro_operator.rs  micro_ops.rs  micro_registration.rs  micro_slice.rs  micro_tensor.rs  tflite_schema_generated.rs
src/kernel/: utils.rs  (+4 more)
tests/: hello_world.rs  hello_world_int8.rs  mnist_cnn.rs  mnist_depthwise_cnn.rs  person_detection_int8.rs
(+37 files in other folders)
