[package]
name = "berrylite"
version = "0.1.0"
edition = "2021"
authors = ["kazuki ikemori (kadu-v)"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "..."
repository = "https://github.com/nefrock/embeddedsw-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
no_std = []

[dependencies]
libm = "0.2.7"
min_max_traits = "0.1.0"


[dependencies.num-traits]
version = "0.2.16"
default-features = false
features = ["libm"]


[dependencies.flatbuffers]
version = "23.5.26"
default-features = false


[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
image = "*"
float_eq = "1"


[[bench]]
name = "mobilenet_v1"
harness = false
